@@ -54,7 +54,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Apache                 Tux
 - Applescript            Stephan Klimek
 - Apt sources.list       Milian Wolff
-- ASM                    Tux
+- ASM                    Tux, Dennis Yurichev
 - ASP                    Amit Gupta
 - Autoconf               Mihai Vasilian
 - AutoHotkey             Naveen Garg
